Location Maps in Place
The two location maps are in place, using the Bing and Google Maps APIs.  Neither yet take locations from the interface.

The drone safety map button will be added next.

--- a/assets/css/uavflightplanner.css
+++ b/assets/css/uavflightplanner.css
@@ -4,7 +4,7 @@
 /* Variable */
 :root{
 --menubuttonwidth: %;
---cssfileversion: "0092";
+--cssfileversion: "0094";
 --footergrey:#999999cc;;
 }
 body{
@@ -168,4 +168,10 @@ text-align: center;
 .pln-notice-container{
  margin: auto;
  border: 3px solid brown;
+}
+#pln-osmap{
+ height: 600px;
+}
+#pln-satview{
+ height: 600px;
 }
