--- a/assets/css/uavflightplanner.css
+++ b/assets/css/uavflightplanner.css
@@ -4,8 +4,12 @@
 /* Variable */
 :root{
 --menubuttonwidth: %;
---cssfileversion: "0102";
+--cssfileversion: "0156";
 --footergrey:#999999cc;;
+}
+*{
+ margin: 0;
+ padding: 0;
 }
 body{
 font-family: Lato;
@@ -29,9 +33,9 @@ div.bground{
     filter: grayscale(0.9);
 }
 div.MenuComponent{
- padding: 0 0 0 0;
+ padding: 0 0 120px 0;
  margin-top: 100px;
- margin-bottom: 100px;
+ margin-bottom: 150px;
 }
 /* CSS for the Gallery element */
 #Gallery{
@@ -175,28 +179,71 @@ text-align: center;
 #pln-satview{
  height: 600px;
 }
-.pln-params{
- font-wieght: 500;
- color: #0000ff;
-}
 /* Styling for competency boxes on the flight parameters page */
 .pln-comp{
  border: 2px solid black;
- margin: 1%;
+ margin: 0 10px 10px;
  padding: 5px;
- height: 18%;
+ height: 120px;
 }
 /* Styling for drone category boxes on the flight parameters page */
 .pln-dronecat{
  border: 2px solid black;
- border-radius: 5px;
+ margin: 0 5px 5px 0px;
+ height: 59px;
+ padding: 5px;
 }
 /* Styling for sub-heading paragaphs for flight parameter sections. */
 .pln-params-p{
  display: block;
  width: 100%;
- height: 60px;
+ height: 40px;
+ font-size: 80%;
+ margin: 3px;
 }
-pln-comp{
+.pln-flightcat{
  border: 1px solid black;
+ margin: 0 5px 15px 0;
+ border-radius: 5px;
+ height: 94px;
+}
+/* Labels for the competencies on the flight parameters page. */
+.pln-comp-lbl{
+ font-size: 110%;
+ font-weight: 600;
+}
+/* Styling for competency checkboxes */
+.pln-comp input{
+ margin-left: 5px;
+}
+/* Styling for description box for competencies. */
+.pln-comp-desc{
+ display: flex;
+ align-items: center;
+}
+/* Styling that applies to all elements in the drone categories column */
+#pln-dronecategories{
+ color: #000055;
+}
+/* Styling that applies to all elements in the flight categories column */
+#pln-flightcategories{
+ color: #005500;
+}
+.pln-comp-head{
+ height: 40px;
+}
+.pln-dronecat-head{
+ height: 25px;
+ font-weight: 600;
+}
+/* Styling that applies to all elements in the competencies column */
+#pln-competencies{
+ color: #000000;
+}
+/* Styling for headers of sections on the flight parameters page. */
+.pln-params-h1{
+ font-weight: 600;
+ font-size: 150%;
+ height: 25px;
+ margin: 3px;
 }
