--- a/assets/css/uavflightplanner.css
+++ b/assets/css/uavflightplanner.css
@@ -4,7 +4,7 @@
 /* Variable */
 :root{
 --menubuttonwidth: %;
---cssfileversion: "0168";
+--cssfileversion: "0179";
 --footergrey:#999999cc;;
 }
 *{
@@ -190,16 +190,16 @@ text-align: center;
 /* Styling for drone category boxes on the flight parameters page */
 .pln-dronecat{
  border: 2px solid black;
- margin: 0 5px 5px 0px;
+ margin: 0 4px 5px 0px;
  height: 67px;
- padding: 5px;
+ padding: 3px;
+ font-size: 10pt;
 }
 /* Styling for sub-heading paragaphs for flight parameter sections. */
 .pln-params-p{
  display: block;
  width: 100%;
  height: 40px;
- font-size: 80%;
  margin: 3px;
 }
 .pln-flightcat{
@@ -222,6 +222,7 @@ text-align: center;
 .pln-comp-desc{
  display: flex;
  align-items: center;
+ font-size: 12pt;
 }
 /* Styling that applies to all elements in the drone categories column */
 #pln-dronecategories{
@@ -237,6 +238,7 @@ text-align: center;
 .pln-dronecat-head{
  height: 25px;
  font-weight: 600;
+ font-size: 14pt;
 }
 /* Styling that applies to all elements in the competencies column */
 #pln-competencies{
@@ -254,4 +256,6 @@ text-align: center;
  display: none;
  margin-left: 30px;
  width: 100px;
+}
+.pln-dronecat-desc{
 }
