--- a/assets/css/uavflightplanner.css
+++ b/assets/css/uavflightplanner.css
@@ -4,7 +4,7 @@
 /* Variable */
 :root{
 --menubuttonwidth: %;
---cssfileversion: "0186";
+--cssfileversion: "0231";
 --footergrey:#999999cc;;
 }
 *{
@@ -26,8 +26,7 @@ div.bground{
     position: fixed;
     background-size: cover;
     margin: 0px;
-    animation-name: hero-zoom;
-    animation-duration: 5s;
+
     animation-fill-mode: forwards;
     background-position: center center;
     opacity: 0.3;
@@ -36,7 +35,12 @@ div.bground{
 div.MenuComponent{
  padding: 0 0 120px 0;
  margin-top: 100px;
- margin-bottom: 150px;
+ margin-bottom: 60px;
+}
+.pln-step{
+ font-weight: 900;
+ font-size: 14pt;
+ margin: 2px 10px 2px 0;
 }
 /* CSS for the Gallery element */
 #Gallery{
@@ -76,13 +80,13 @@ margin: 0 10% 0 50px;
  margin: 0 50px;
 }
 footer{
-position: fixed;
-bottom: 0;
-width: 100%;
-text-align: center;
-background-color: var(--footergrey);
-height: 80px;
-z-index: 5;
+ position: fixed;
+ bottom: 0;
+ width: 100%;
+ text-align: center;
+ background-color: var(--footergrey);
+ height: 60px;
+ z-index: 5;
 }
 footer p{
 color: #ffffffff;
@@ -146,6 +150,8 @@ text-align: center;
  background-position: center center;
  padding: 10% 10% 15px;
  max-width: 1300px;
+    animation-name: hero-zoom;
+    animation-duration: 3s;
 }
 #pln-cta p{
  font-size: 18pt;
@@ -160,6 +166,8 @@ text-align: center;
 }
 #pln-cta-primary{
  margin: auto;
+    animation-name: hero-zoom;
+    animation-duration: 5s;
 }
 .pln-notice{
  font-weight: 800;
@@ -184,30 +192,19 @@ text-align: center;
 /* Styling for competency boxes on the flight parameters page */
 .pln-comp{
  border: 2px solid black;
- margin: 0 10px 10px;
  padding: 5px;
  height: 120px;
 }
 /* Styling for drone category boxes on the flight parameters page */
 .pln-dronecat{
  border: 2px solid black;
- margin: 0 4px 5px 0px;
  height: 67px;
  padding: 3px;
  font-size: 10pt;
 }
-/* Styling for sub-heading paragaphs for flight parameter sections. */
-.pln-params-p{
- display: block;
- width: 100%;
- height: 40px;
- margin: 3px;
-}
 .pln-flightcat{
  border: 2px solid;
- margin: 0 5px 15px 0;
- border-radius: 5px;
- height: 94px;
+ height: 100px;
  padding: 5px;
 }
 /* Labels for the competencies on the flight parameters page. */
@@ -228,10 +225,12 @@ text-align: center;
 /* Styling that applies to all elements in the drone categories column */
 #pln-dronecategories{
  color: #000055;
+ height: 800px;
 }
 /* Styling that applies to all elements in the flight categories column */
 #pln-flightcategories{
  color: #554400;
+ height: 800px;
 }
 .pln-comp-head{
  height: 40px;
@@ -244,13 +243,13 @@ text-align: center;
 /* Styling that applies to all elements in the competencies column */
 #pln-competencies{
  color: #000000;
+ height: 800px;
 }
 /* Styling for headers of sections on the flight parameters page. */
 .pln-params-h1{
  font-weight: 600;
- font-size: 150%;
- height: 25px;
- margin: 3px;
+ font-size: 24pt;;
+ margin: 10px 0;
 }
 #pln-param-reset{
  z-index: 10;
@@ -260,6 +259,24 @@ text-align: center;
 }
 .pln-dronecat-desc{
 }
+.pln-param-instruct{
+ font-size: 14pt;
+ background-color: #ffffffff;
+ position: absolute;
+ bottom: 50px;
+ height: 80px;
+}
 .row{
  margin: 0;
+}
+@keyframes hero-zoom{
+ from{
+    transform: scale(0.99);
+    background-image: blur(10px);
+
+  }
+  to{
+    transform: scale(1);
+    background-image: blur(1px);
+  }
 }
