--- a/assets/css/uavflightplanner.css
+++ b/assets/css/uavflightplanner.css
@@ -4,16 +4,18 @@
 /* Variable */
 :root{
 --menubuttonwidth: %;
---cssfileversion: "0262";
+--cssfileversion: "0267";
 --footergrey:#999999cc;;
 --flightallowed:#209020;;
 --flightnotallowed:#995555;;
 }
+/* Styling to apply by default to all body elements. */
 body{
  font-family: Lato;
  background-color: var(--bgroundshade);
  margin: 0;
 }
+/* Styling for the site-wide background image */
 div.bground{
     width: 100%;
     height: 100%;
@@ -29,6 +31,7 @@ div.bground{
     opacity: 0.3;
     filter: grayscale(0.9);
 }
+/* Styling for the 'Virtual Page' div elements */
 div.MenuComponent{
  padding: 0 0 120px 0;
  margin-top: 100px;
@@ -55,6 +58,14 @@ div.MenuComponent{
 .pln-steps{
  background-color: var(--footergrey);
  padding: 5px;
+}
+.pln-btn{
+ background-color: #007bff;
+ color: #ffffff;
+ margin: 2px;
+ padding: 2px;
+ border-radius: 2px;
+ cursor: pointer;
 }
 /* CSS for the Gallery element */
 #Gallery{
@@ -300,6 +311,9 @@ text-align: center;
 .pln-flight-no{
  color: var(--flightnotallowed);
  text-decoration: line-through;
+}
+#pln-next-location{
+ display: none;
 }
 .row{
  margin: 0;
