Revert "Mobile Style Small Adjustments"
This reverts commit e90875ff98b159f9c468a4e59dcbf7a0ececd27c.

--- a/assets/css/uavflightplanner.css
+++ b/assets/css/uavflightplanner.css
@@ -542,7 +542,7 @@ text-align: center;
   #pln-osmap, #pln-satview {
     height: 300px;
   }
-  #FlightParameters, #Location, #HomePage {
+  .MenuComponent {
     padding-top: 100px;
   }
 
