--- a/assets/css/uavflightplanner.css
+++ b/assets/css/uavflightplanner.css
@@ -542,7 +542,7 @@ text-align: center;
   #pln-osmap, #pln-satview {
     height: 300px;
   }
-  .MenuComponent {
+  #FlightParameters, #Location {
     padding-top: 100px;
   }
 
